--- a/tabelle.html
+++ b/tabelle.html
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="ISO-8859-1" ?>
+<?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="de">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link href="css/xhtml.css" rel="stylesheet" type="text/css"
 	media="screen" />
 <title>Hausaufgabe: Mit CSS formatierte Tabelle aller "XHTML 1.0
@@ -37,20 +37,20 @@
 		<tbody>
 			<tr>
 				<td class="tag">&lt;a&gt;&lt;/a&gt;</td>
-				<td class="description">Verweis (Hyperlink) und Anker für
+				<td class="description">Verweis (Hyperlink) und Anker fÃ¼r
 					Verweise</td>
 				<td class="inline-true">Inline</td>
 				<td class="semantic-true">true</td>
 			</tr>
 			<tr>
 				<td class="tag">&lt;abbr&gt;&lt;/abbr&gt;</td>
-				<td class="description">Abkürzung</td>
+				<td class="description">AbkÃ¼rzung</td>
 				<td class="inline-true">Inline</td>
 				<td class="semantic-true">true</td>
 			</tr>
 			<tr>
 				<td class="tag">&lt;acronym&gt;&lt;/acronym&gt;</td>
-				<td class="description">Markiert eine Abkürzung</td>
+				<td class="description">Markiert eine AbkÃ¼rzung</td>
 				<td class="inline-true">Inline</td>
 				<td class="semantic-true">true</td>
 			</tr>
@@ -71,26 +71,26 @@
 			<tr>
 				<td class="tag">&lt;b&gt;&lt;/b&gt;</td>
 				<td class="description">Stilistische Hervorhebung im Text
-					(üblicherweise fett dargestellt)</td>
+					(Ã¼blicherweise fett dargestellt)</td>
 				<td class="inline-true">Inline</td>
 				<td class="semantic-false">false</td>
 			</tr>
 			<tr>
 				<td class="tag">&lt;base /&gt;</td>
-				<td class="description">Basis-URL für Referenzen</td>
+				<td class="description">Basis-URL fÃ¼r Referenzen</td>
 				<td class="nothing"></td>
 				<td class="semantic-false">false</td>
 			</tr>
 			<tr>
 				<td class="tag">&lt;bdo&gt;&lt;/bdo&gt;</td>
-				<td class="description">Richtungsänderung bei bidirektionalem
+				<td class="description">RichtungsÃ¤nderung bei bidirektionalem
 					Text</td>
 				<td class="inline-true">Inline</td>
 				<td class="semantic-false">false</td>
 			</tr>
 			<tr>
 				<td class="tag">&lt;big&gt;&lt;/big&gt;</td>
-				<td class="description">Markiert Text, der größer dargestellt
+				<td class="description">Markiert Text, der grÃ¶ÃŸer dargestellt
 					werden soll als normal</td>
 				<td class="inline-true">Inline</td>
 				<td class="semantic-false">false</td>
@@ -117,13 +117,13 @@
 			</tr>
 			<tr>
 				<td class="tag">&lt;button&gt;&lt;/button&gt;</td>
-				<td class="description">Schaltfläche in einem Formular</td>
+				<td class="description">SchaltflÃ¤che in einem Formular</td>
 				<td class="inline-true">Inline</td>
 				<td class="semantic-false">false</td>
 			</tr>
 			<tr>
 				<td class="tag">&lt;caption&gt;&lt;/caption&gt;</td>
-				<td class="description">Tabellenüberschrift / -unterschrift</td>
+				<td class="description">TabellenÃ¼berschrift / -unterschrift</td>
 				<td class="nothing"></td>
 				<td class="semantic-true">true</td>
 			</tr>
@@ -161,7 +161,7 @@
 			</tr>
 			<tr>
 				<td class="tag">&lt;del&gt;&lt;/del&gt;</td>
-				<td class="description">gelöschter Inhalt (Änderungsmarkierung)</td>
+				<td class="description">gelÃ¶schter Inhalt (Ã„nderungsmarkierung)</td>
 				<td class="block-true">Block/Inline</td>
 				<td class="semantic-true">true</td>
 			</tr>
@@ -179,7 +179,7 @@
 			</tr>
 			<tr>
 				<td class="tag">&lt;dl&gt;&lt;/dl&gt;</td>
-				<td class="description">Liste mit dt- und dd-Elementen, für
+				<td class="description">Liste mit dt- und dd-Elementen, fÃ¼r
 					Definitionslisten, Dialoge usw.</td>
 				<td class="block-true">Block</td>
 				<td class="semantic-true">true</td>
@@ -194,7 +194,7 @@
 			<tr>
 				<td class="tag">&lt;em&gt;&lt;/em&gt;</td>
 				<td class="description">emphatischer Ausdruck innerhalb eines
-					Absatzes (z.B. überspitzte Formulierung)</td>
+					Absatzes (z.B. Ã¼berspitzte Formulierung)</td>
 				<td class="inline-true">Inline</td>
 				<td class="semantic-true">true</td>
 			</tr>
@@ -213,37 +213,37 @@
 			</tr>
 			<tr>
 				<td class="tag">&lt;h1&gt;&lt;/h1&gt;</td>
-				<td class="description">Überschrift 1. Ordnung</td>
+				<td class="description">Ãœberschrift 1. Ordnung</td>
 				<td class="block-true">Block</td>
 				<td class="semantic-true">true</td>
 			</tr>
 			<tr>
 				<td class="tag">&lt;h2&gt;&lt;/h2&gt;</td>
-				<td class="description">Überschrift 2. Ordnung</td>
+				<td class="description">Ãœberschrift 2. Ordnung</td>
 				<td class="block-true">Block</td>
 				<td class="semantic-true">true</td>
 			</tr>
 			<tr>
 				<td class="tag">&lt;h3&gt;&lt;/h3&gt;</td>
-				<td class="description">Überschrift 3. Ordnung</td>
+				<td class="description">Ãœberschrift 3. Ordnung</td>
 				<td class="block-true">Block</td>
 				<td class="semantic-true">true</td>
 			</tr>
 			<tr>
 				<td class="tag">&lt;h4&gt;&lt;/h4&gt;</td>
-				<td class="description">Überschrift 4. Ordnung</td>
+				<td class="description">Ãœberschrift 4. Ordnung</td>
 				<td class="block-true">Block</td>
 				<td class="semantic-true">true</td>
 			</tr>
 			<tr>
 				<td class="tag">&lt;h5&gt;&lt;/h5&gt;</td>
-				<td class="description">Überschrift 5. Ordnung</td>
+				<td class="description">Ãœberschrift 5. Ordnung</td>
 				<td class="block-true">Block</td>
 				<td class="semantic-true">true</td>
 			</tr>
 			<tr>
 				<td class="tag">&lt;h6&gt;&lt;/h6&gt;</td>
-				<td class="description">Überschrift 6. Ordnung</td>
+				<td class="description">Ãœberschrift 6. Ordnung</td>
 				<td class="block-true">Block</td>
 				<td class="semantic-true">true</td>
 			</tr>
@@ -262,14 +262,14 @@
 			<tr>
 				<td class="tag">&lt;html&gt;&lt;/html&gt;</td>
 				<td class="description">Dokumentelement von HTML-Dokumenten,
-					schließt das gesamte Dokument ein</td>
+					schlieÃŸt das gesamte Dokument ein</td>
 				<td class="nothing"></td>
 				<td class="semantic-false">false</td>
 			</tr>
 			<tr>
 				<td class="tag">&lt;i&gt;&lt;/i&gt;</td>
 				<td class="description">spezieller Ausdruck im Text, z.B.
-					Fachterminus oder Idiom (üblicherweise kursiv dargestellt)</td>
+					Fachterminus oder Idiom (Ã¼blicherweise kursiv dargestellt)</td>
 				<td class="inline-true">Inline</td>
 				<td class="semantic-false">false</td>
 			</tr>
@@ -281,21 +281,21 @@
 			</tr>
 			<tr>
 				<td class="tag">&lt;input /&gt;</td>
-				<td class="description">Formularelement, verwendbar für diverse
-					Typen wie Eingabefelder, Schaltflächen, Auswahlfelder usw.</td>
+				<td class="description">Formularelement, verwendbar fÃ¼r diverse
+					Typen wie Eingabefelder, SchaltflÃ¤chen, Auswahlfelder usw.</td>
 				<td class="inline-true">Inline</td>
 				<td class="semantic-false">false</td>
 			</tr>
 			<tr>
 				<td class="tag">&lt;ins&gt;&lt;/ins&gt;</td>
-				<td class="description">Eingefügter Inhalt
-					(Änderungsmarkierung)</td>
+				<td class="description">EingefÃ¼gter Inhalt
+					(Ã„nderungsmarkierung)</td>
 				<td class="block-true">Block/Inline</td>
 				<td class="semantic-true">true</td>
 			</tr>
 			<tr>
 				<td class="tag">&lt;kbd&gt;&lt;/kbd&gt;</td>
-				<td class="description">Darstellung eines über Tastatur
+				<td class="description">Darstellung eines Ã¼ber Tastatur
 					einzugebenden Textes im Text</td>
 				<td class="inline-true">Inline</td>
 				<td class="semantic-true">true</td>
@@ -308,7 +308,7 @@
 			</tr>
 			<tr>
 				<td class="tag">&lt;legend&gt;&lt;/legend&gt;</td>
-				<td class="description">Überschrift für eine fieldset-Gruppe
+				<td class="description">Ãœberschrift fÃ¼r eine fieldset-Gruppe
 					von Elementen in einem Formular</td>
 				<td class="nothing"></td>
 				<td class="semantic-false">false</td>
@@ -329,29 +329,29 @@
 			</tr>
 			<tr>
 				<td class="tag">&lt;map&gt;&lt;/map&gt;</td>
-				<td class="description">Bereich für verweis-sensitive Grafiken</td>
+				<td class="description">Bereich fÃ¼r verweis-sensitive Grafiken</td>
 				<td class="inline-true">Inline</td>
 				<td class="semantic-false">false</td>
 			</tr>
 			<tr>
 				<td class="tag">&lt;meta /&gt;</td>
-				<td class="description">Meta-Angabe für nicht im Inhalt
-					sichtbare Dokumentinformationen oder für Anweisungen an den
+				<td class="description">Meta-Angabe fÃ¼r nicht im Inhalt
+					sichtbare Dokumentinformationen oder fÃ¼r Anweisungen an den
 					Webserver</td>
 				<td class="nothing"></td>
 				<td class="semantic-false">false</td>
 			</tr>
 			<tr>
 				<td class="tag">&lt;noscript&gt;&lt;/noscript&gt;</td>
-				<td class="description">Bereich für Inhalte, die angezeigt
-					werden, wenn JavaScript im Browser deaktiviert oder nicht verfügbar
+				<td class="description">Bereich fÃ¼r Inhalte, die angezeigt
+					werden, wenn JavaScript im Browser deaktiviert oder nicht verfÃ¼gbar
 					ist</td>
 				<td class="block-true">Block</td>
 				<td class="semantic-false">false</td>
 			</tr>
 			<tr>
 				<td class="tag">&lt;object&gt;&lt; /object&gt;</td>
-				<td class="description">Eingebettetes Objekt, geeignet für
+				<td class="description">Eingebettetes Objekt, geeignet fÃ¼r
 					spezielle Multimedia-Objekte, Java-Applets usw.</td>
 				<td class="inline-true">Inline</td>
 				<td class="semantic-false">false</td>
@@ -364,14 +364,14 @@
 			</tr>
 			<tr>
 				<td class="tag">&lt;optgroup&gt;&lt; /optgroup&gt;</td>
-				<td class="description">Gruppe von Auswahlmöglichkeiten in
+				<td class="description">Gruppe von AuswahlmÃ¶glichkeiten in
 					einer Auswahlliste</td>
 				<td class="nothing"></td>
 				<td class="semantic-false">false</td>
 			</tr>
 			<tr>
 				<td class="tag">&lt;option&gt;&lt;/option&gt;</td>
-				<td class="description">Auswahlmöglichkeit in einer
+				<td class="description">AuswahlmÃ¶glichkeit in einer
 					Auswahlliste</td>
 				<td class="nothing"></td>
 				<td class="semantic-false">false</td>
@@ -391,7 +391,7 @@
 			</tr>
 			<tr>
 				<td class="tag">&lt;pre&gt;</td>
-				<td class="description">Präformatierter Text (alle
+				<td class="description">PrÃ¤formatierter Text (alle
 					Whitespace-Zeichen werden im Browser so dargestellt wie im Text
 					enthalten)</td>
 				<td class="block-true">Block</td>
@@ -399,7 +399,7 @@
 			</tr>
 			<tr>
 				<td class="tag">&lt;q&gt;&lt;/q&gt;</td>
-				<td class="description">Wörtliche Rede in einem Text</td>
+				<td class="description">WÃ¶rtliche Rede in einem Text</td>
 				<td class="inline-true">Inline</td>
 				<td class="semantic-true">true</td>
 			</tr>
@@ -412,7 +412,7 @@
 			</tr>
 			<tr>
 				<td class="tag">&lt;script&gt;&lt;/script&gt;</td>
-				<td class="description">Scriptbereich für JavaScript und andere
+				<td class="description">Scriptbereich fÃ¼r JavaScript und andere
 					Scriptsprachen</td>
 				<td class="inline-true">Inline</td>
 				<td class="semantic-false">false</td>
@@ -445,7 +445,7 @@
 			</tr>
 			<tr>
 				<td class="tag">&lt;style&gt;&lt;/style&gt;</td>
-				<td class="description">Bereich für Stylesheet-Definitionen,
+				<td class="description">Bereich fÃ¼r Stylesheet-Definitionen,
 					z.B. in CSS</td>
 				<td class="nothing"></td>
 				<td class="semantic-false">false</td>
@@ -470,7 +470,7 @@
 			</tr>
 			<tr>
 				<td class="tag">&lt;tbody&gt;&lt;/tbody&gt;</td>
-				<td class="description">Tabellenkörper mit den eigentlichen
+				<td class="description">TabellenkÃ¶rper mit den eigentlichen
 					Daten</td>
 				<td class="nothing"></td>
 				<td class="semantic-false">false</td>
@@ -490,7 +490,7 @@
 			</tr>
 			<tr>
 				<td class="tag">&lt;tfoot&gt;&lt;/tfoot&gt;</td>
-				<td class="description">Fußbereich in einer Tabelle, z.B. für
+				<td class="description">FuÃŸbereich in einer Tabelle, z.B. fÃ¼r
 					summarische Daten</td>
 				<td class="nothing"></td>
 				<td class="semantic-false">false</td>
@@ -528,7 +528,7 @@
 			</tr>
 			<tr>
 				<td class="tag">&lt;ul&gt;&lt;/ul&gt;</td>
-				<td class="description">Unsortierte Liste (Aufzählungsliste)</td>
+				<td class="description">Unsortierte Liste (AufzÃ¤hlungsliste)</td>
 				<td class="block-true">Block</td>
 				<td class="semantic-false">false</td>
 			</tr>
