--- a/tabelle.html
+++ b/tabelle.html
@@ -26,6 +26,7 @@
 	</div>
 	<p><a class="buttons" href="index.html">zur&uuml;ck</a></p>
 	<table border="1">
+		<caption> Mit CSS formatierte Tabelle aller "XHTML 1.0 strict"-Elemente</caption>
 		<thead>
 			<tr>
 				<th>Tag</th>
