--- a/tabelle.html
+++ b/tabelle.html
@@ -22,7 +22,7 @@
 			alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a> <a
 			href="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Fandreasdenninger.cloudcontrolled.com%2Ftabelle.html&amp;profile=css21&amp;usermedium=all&amp;warning=1&amp;vextwarning="><img
 			src="http://www.w3.org/Icons/valid-css2-blue"
-			alt="enter image description here" /></a>
+			alt="Valid CSS 2.1" /></a>
 	</div>
 	<p><a class="buttons" href="index.html">zur&uuml;ck</a></p>
 	<table border="1">
